# ragged-buffer

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  monomorphize.sh  pyproject.toml  ragged_buffer.pyi  test.py
.github/workflows/: publish-wheel.yaml  test.yaml
ragged_buffer/: __init__.py  __init__.pyi
src/: lib.rs  monomorphs.rs  ragged_buffer.rs  ragged_buffer_view.rs
src/monomorphs/: bool.rs  f32.rs  i64.rs
tests/: test.py
