[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "ragged-buffer"
dependencies = ["numpy~=1.21"]
requires-python = ">=3.6"
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]