[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "ragged-buffer"
dependencies = ["numpy~=1.21"]
requires-python = ">=3.6"
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]